--- a/style.css
+++ b/style.css
@@ -79,5 +79,13 @@ html,body{
 	margin-left: 200px;
 }
 
+.textcard{
+text-align: center;
+  margin: auto;
+  width: 40%;
+  border: 0px solid ;
+  padding: 10px;
+}
+
 
 
